@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.chessclock.android" android:installLocation="auto"
-      android:versionCode="26" android:versionName="2.10.0">
-    <application android:label="@string/app_name" android:icon="@drawable/icon">
-        <activity android:name=".ChessClock"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".Prefs" 
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/android:Theme.Material">
-        </activity>
-    </application>
-    <uses-sdk
-        android:minSdkVersion="21"
-        android:targetSdkVersion="23" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+          package="com.chessclock.android" android:installLocation="auto"
+          android:versionCode="26" android:versionName="2.10.0">
+  <application android:label="@string/app_name" android:icon="@drawable/icon">
+    <activity android:name=".ChessClock"
+              android:label="@string/app_name"
+              android:screenOrientation="portrait">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity android:name=".Prefs"
+              android:label="@string/app_name"
+              android:screenOrientation="portrait"
+              android:theme="@style/android:Theme.Material">
+    </activity>
+    <meta-data android:name="android.max_aspect"
+               android:value="2.1" />
+  </application>
+  <uses-sdk android:minSdkVersion="21"
+            android:targetSdkVersion="23" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
